--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "opencv"]
 	path = opencv
-	url = https://github.com/opencv/opencv.git
+	url = https://github.com/edumotya/opencv.git
+	branch = feature/ImageFeatures_setters
 [submodule "opencv_contrib"]
 	path = opencv_contrib
 	url = https://github.com/opencv/opencv_contrib.git
